tests/bad/wrong_syntax/bad107.lat
int main() { return 0; }

int return() { return 0; }